--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ body {
 	.top-fold {
 		position: absolute;
 		top: 50px;
-		width: 0;
-		height: 0;
+		width: 0px;
+		height: 0px;
 		border-style: solid;
 		border-width: 50px 100px 0 100px;
 		-webkit-transform-origin: 50% 0%;
